--- a/bsconfig.json
+++ b/bsconfig.json
@@ -1,12 +1,10 @@
-// This is the configuration file used by BuckleScript's build system bsb. Its documentation lives here: http://bucklescript.github.io/bucklescript/docson/#build-schema.json
-// BuckleScript comes with its own parser for bsconfig.json, which is normal JSON, with the extra support of comments and trailing commas.
 {
   "name": "reasonbot",
   "version": "0.1.0",
   "sources": [
     {
-      "dir" : "src",
-      "subdirs" : true
+      "dir": "src",
+      "subdirs": true
     },
     {
       "dir": "__tests__",
@@ -19,11 +17,13 @@
   },
   "suffix": ".bs.js",
   "bs-dependencies": [
-      // add your dependencies here. You'd usually install them normally through `npm install my-dependency`. If my-dependency has a bsconfig.json too, then everything will work seamlessly.
+    "@ahrefs/bs-dotenv"
   ],
-  "bs-dev-dependencies": ["@glennsl/bs-jest"],
+  "bs-dev-dependencies": [
+    "@glennsl/bs-jest"
+  ],
   "warnings": {
-    "error" : "+101"
+    "error": "+101"
   },
   "namespace": true,
   "refmt": 3
