--- a/package.json
+++ b/package.json
@@ -13,15 +13,17 @@
   "author": "mkhoeini",
   "license": "MIT",
   "devDependencies": {
-    "@glennsl/bs-jest": "^0.4.2",
-    "bs-platform": "^2.2.0"
+    "@glennsl/bs-jest": "^0.4.9",
+    "bs-platform": "^7.0.1"
   },
   "description": "A simple telegram bot in ReasonML.",
   "dependencies": {
-    "node-telegram-bot-api": "^0.30.0",
-    "pouchdb-adapter-memory": "^6.4.3",
-    "rxdb": "^7.4.1",
-    "rxjs": "^5.5.6"
+    "@ahrefs/bs-dotenv": "2.0.0",
+    "dotenv": "8.2.0",
+    "node-telegram-bot-api": "^0.40.0",
+    "pouchdb-adapter-memory": "^7.1.1",
+    "rxdb": "^8.7.5",
+    "rxjs": "^6.5.4"
   },
   "repository": {
     "type": "git",
