--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "scripts": {
     "build": "bsb -make-world",
-    "start": "bsb -make-world -w",
+    "watch": "bsb -make-world -w",
+    "start": "bsb -make-world && node src/Bot.bs.js",
     "clean": "bsb -clean-world",
     "test": "jest --notify --watch"
   },
